# sdl3_sonamang

./: CMakeLists.txt  README.md  a.out  compile_command.txt  main.cpp  text.cpp
